--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ body {
 .dropbtn:hover,
 .dropbtn:focus {
   background-color: hsl(209, 23%, 22%);
+  font-weight: 600;
 }
 
 /* The container <div> - needed to position the dropdown content */
