--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ body {
   width: 20rem;
   border-radius: 0.3rem;
 }
-icon:hover{
+.icon:hover{
     height: 3.2rem;
   }
 .icon:focus {
@@ -363,7 +363,7 @@ icon:hover{
     height: 2.5rem;
     width: 17.5rem;
   }
-  icon:hover{
+  .icon:hover{
     height: 2.7rem;
   }
   
@@ -440,7 +440,7 @@ icon:hover{
     height: 2.5rem;
     width: 12rem;
   }
-  icon:hover{
+  .icon:hover{
     height: 2.7rem;
   }
   .mode_type{
